Change isAnotherEquipped requiring current stack and move deprecated methods down